<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/stv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:text="@string/s"
        android:textColor="@color/color_orange_900"
        android:textSize="@dimen/sp38"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/TextBold"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp15"
        android:maxLines="3"
        android:text="@string/first_of_few_steps_to_set_you_up_for_with_a_bank_account"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/sp24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv" />

    <TextView
        android:id="@+id/panHint"
        style="@style/TextBold"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginTop="@dimen/dp60"
        android:layout_marginEnd="@dimen/dp15"
        android:maxLines="3"
        android:text="@string/pan_number"
        android:textAllCaps="true"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/sp14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/pan"
        style="@style/TextRegular"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp10"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:background="@drawable/background_card_soft_corner_grey"
        android:imeOptions="actionNext"
        android:inputType="textCapCharacters"
        android:maxLength="10"
        android:textColor="@color/textColorBlack"
        android:textColorHint="@color/secondaryTextColorHint"
        app:layout_constraintEnd_toEndOf="@id/panHint"
        app:layout_constraintStart_toStartOf="@id/panHint"
        app:layout_constraintTop_toBottomOf="@id/panHint"
        android:autofillHints="ABCDE0000G"
        android:labelFor="@+id/pan"/>

    <TextView
        android:id="@+id/dateHint"
        style="@style/TextBold"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp15"
        android:maxLines="3"
        android:text="@string/birthdate"
        android:textAllCaps="true"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/sp14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pan" />


    <EditText
        android:id="@+id/day"
        style="@style/TextRegular"
        android:layout_width="@dimen/dp80"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/background_card_soft_corner_grey"
        android:digits="0123456789"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="2"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:textColor="@color/textColorBlack"
        android:textColorHint="@color/secondaryTextColorHint"
        app:layout_constraintEnd_toStartOf="@id/month"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateHint"
        tools:text="1"/>

    <EditText
        android:id="@+id/month"
        style="@style/TextRegular"
        android:layout_width="@dimen/dp80"
        android:layout_height="@dimen/dp50"
        android:padding="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/background_card_soft_corner_grey"
        android:digits="0123456789"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="2"
        android:gravity="center"
        android:textColor="@color/textColorBlack"
        android:textColorHint="@color/secondaryTextColorHint"
        app:layout_constraintEnd_toStartOf="@id/year"
        app:layout_constraintStart_toEndOf="@id/day"
        app:layout_constraintTop_toBottomOf="@id/dateHint"
        tools:text="8" />

    <EditText
        android:id="@+id/year"
        style="@style/TextRegular"
        android:layout_width="@dimen/dp120"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp15"
        android:background="@drawable/background_card_soft_corner_grey"
        android:digits="0123456789"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="4"
        android:gravity="center"
        tools:text="1994"
        android:padding="@dimen/dp10"
        android:textColor="@color/textColorBlack"
        android:textColorHint="@color/secondaryTextColorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/month"
        app:layout_constraintTop_toBottomOf="@id/dateHint" />

    <TextView
        android:id="@+id/terms"
        style="@style/TextRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"
        android:lines="2"
        android:text="@string/terms_and_policy_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/sp12"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"
        android:background="@drawable/background_soft_corner_primary"
        android:text="@string/next"
        android:clickable="false"
        android:enabled="false"
        android:textColor="@color/color_white_1000"
        app:layout_constraintBottom_toTopOf="@+id/noPan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noPan"
        style="@style/TextBold"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/i_don_t_have_pan"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/sp14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>